lang.y
%{
	// this part is copied to the beginning of the parser 
	#include <stdio.h>
	#include "lang.h"
	#include "lexer.h"
	void yyerror(char *);
	int yylex(void);
        struct cmd * root;
%}

%union {
unsigned int n;
char * i;
struct expr_list * e_l;
struct expr * e;
struct cmd * c;
void * none;
}

// Terminals
%token <n> TM_NAT
%token <i> TM_IDENT
%token <none> TM_LEFT_BRACE TM_RIGHT_BRACE
%token <none> TM_LEFT_PAREN TM_RIGHT_PAREN
%token <none> TM_TRUE TM_FALSE
%token <none> TM_COLON
%token <none> TM_COMMA
%token <none> TM_CONTINUE
%token <none> TM_BREAK
%token <none> TM_SKIP
%token <none> TM_SEMICOL
%token <none> TM_LOOP_INIT TM_LOOP_BODY
%token <none> TM_MALLOC TM_RI TM_RC TM_WI TM_WC
%token <none> TM_VAR TM_IF TM_THEN TM_ELSE TM_WHILE TM_DO
%token <none> TM_ASGNOP
%token <none> TM_OR
%token <none> TM_AND
%token <none> TM_NOT
%token <none> TM_LT TM_LE TM_GT TM_GE TM_EQ TM_NE
%token <none> TM_PLUS TM_MINUS
%token <none> TM_MUL TM_DIV TM_MOD

// Nonterminals
%type <c> NT_WHOLE
%type <c> NT_CMD
%type <c> NT_CMD_ 
%type <c> NT_CMDS_
// CMD WITH END
%type <e> NT_EXPR_2
%type <e> NT_EXPR
%type <e_l> NT_EXPR_LIST

// Priority
%nonassoc TM_ASGNOP
%left TM_OR
%left TM_AND
%left TM_LT TM_LE TM_GT TM_GE TM_EQ TM_NE
%left TM_PLUS TM_MINUS
%left TM_MUL TM_DIV TM_MOD
%left TM_NOT
%left TM_LEFT_PAREN TM_RIGHT_PAREN
%left TM_SEMICOL
%left TM_COLON

%%

NT_WHOLE:
  NT_CMD
  {
    $$ = ($1);
    root = $$;
  }
| NT_CMDS_
  {
    $$ = ($1);
    root = $$;
  }
| NT_CMDS_ NT_CMD
  {
    $$ = (TSeq($1, $2));
    root = $$;
  }
;

NT_CMD:
 TM_CONTINUE
  {
    $$ = (TContinue());
  }
| TM_BREAK
  {
    $$ = (TBreak());
  }
| TM_SKIP
  {
    $$ = (TSkip());
  }
| TM_VAR TM_IDENT
  {
    $$ = (TDecl($2));
  }
| NT_EXPR TM_ASGNOP NT_EXPR
  {
    $$ = (TAsgn($1,$3));
  }
| NT_EXPR 
  {
    $$ = (TExpr($1));
  }
;

NT_CMDS_:
  NT_CMD_
  {
    $$ = ($1);
  }
| NT_CMDS_ NT_CMD_ %prec TM_SEMICOL
  {
    $$ = (TSeq($1, $2));
  }
;

NT_CMD_:
  TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_WHOLE TM_RIGHT_BRACE TM_ELSE TM_COLON TM_LEFT_BRACE NT_WHOLE TM_RIGHT_BRACE
  {
    $$ = (TIf($3,$7,$12));
  }
| TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_WHOLE TM_RIGHT_BRACE
  {
    $$ = (TIf($3,$7,TSkip()));
  }
| TM_LOOP_INIT TM_COLON TM_LEFT_BRACE NT_WHOLE TM_RIGHT_BRACE TM_LOOP_BODY TM_COLON TM_LEFT_BRACE NT_WHOLE TM_RIGHT_BRACE
  {
    $$ = TLoop($4, $9);
  }
| TM_LOOP_INIT TM_COLON TM_LOOP_BODY TM_COLON TM_LEFT_BRACE NT_WHOLE TM_RIGHT_BRACE
  {
    $$ = TLoop(TSkip(), $6);
  }
| TM_LOOP_INIT TM_COLON TM_LEFT_BRACE TM_RIGHT_BRACE TM_LOOP_BODY TM_COLON TM_LEFT_BRACE NT_WHOLE TM_RIGHT_BRACE
  {
    $$ = TLoop(TSkip(), $8);
  }
| NT_CMD TM_SEMICOL
  {
    $$ = ($1);
  }
| TM_SEMICOL
  {
    $$ = (TSkip());
  }
;

NT_EXPR_LIST:
  NT_EXPR
  {
    $$ = (TExprList($1, NULL));
  }
| NT_EXPR TM_COMMA NT_EXPR_LIST
  {
    $$ = (TExprList($1, $3));
  }
;


NT_EXPR_2:
  TM_NAT
  {
    $$ = (TConst($1));
  }
| TM_TRUE 
  {
    $$ = (TConst(1));
  }
| TM_FALSE
  {
    $$ = (TConst(0));
  }
| TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
  {
    $$ = ($2);
  }
| TM_IDENT TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN
  {
    $$ = (TFun($1, $3));
  }
| TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN
  {
    $$ = (TFun($1, NULL));
  }
| TM_IDENT
  {
    $$ = (TVar($1));
  }
| TM_NOT NT_EXPR_2
  {
    $$ = (TUnOp(T_NOT,$2));
  }
| TM_MINUS NT_EXPR_2
  {
    $$ = (TUnOp(T_UMINUS,$2));
  }
;

NT_EXPR:
  NT_EXPR_2
  {
    $$ = ($1);
  }
| NT_EXPR TM_MUL NT_EXPR
  {
    $$ = (TBinOp(T_MUL,$1,$3));
  }
| NT_EXPR TM_PLUS NT_EXPR
  {
    $$ = (TBinOp(T_PLUS,$1,$3));
  }
| NT_EXPR TM_MINUS NT_EXPR
  {
    $$ = (TBinOp(T_MINUS,$1,$3));
  }
| NT_EXPR TM_DIV NT_EXPR
  {
    $$ = (TBinOp(T_DIV,$1,$3));
  }
| NT_EXPR TM_MOD NT_EXPR
  {
    $$ = (TBinOp(T_MOD,$1,$3));
  }
| NT_EXPR TM_LT NT_EXPR
  {
    $$ = (TBinOp(T_LT,$1,$3));
  }
| NT_EXPR TM_GT NT_EXPR
  {
    $$ = (TBinOp(T_GT,$1,$3));
  }
| NT_EXPR TM_LE NT_EXPR
  {
    $$ = (TBinOp(T_LE,$1,$3));
  }
| NT_EXPR TM_GE NT_EXPR
  {
    $$ = (TBinOp(T_GE,$1,$3));
  }
| NT_EXPR TM_EQ NT_EXPR
  {
    $$ = (TBinOp(T_EQ,$1,$3));
  }
| NT_EXPR TM_NE NT_EXPR
  {
    $$ = (TBinOp(T_NE,$1,$3));
  }
| NT_EXPR TM_AND NT_EXPR
  {
    $$ = (TBinOp(T_AND,$1,$3));
  }
| NT_EXPR TM_OR NT_EXPR
  {
    $$ = (TBinOp(T_OR,$1,$3));
  }
;


%%

void yyerror(char* s)
{
    fprintf(stderr , "%s\n",s);
}
