lang.output
Terminals unused in grammar

    TM_MALLOC
    TM_RI
    TM_RC
    TM_WI
    TM_WC
    TM_THEN
    TM_WHILE
    TM_DO


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_CONTINUE
    3       | TM_BREAK
    4       | TM_SKIP
    5       | TM_VAR TM_IDENT
    6       | NT_EXPR TM_ASGNOP NT_EXPR
    7       | NT_CMD TM_SEMICOL NT_CMD
    8       | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    9       | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   10       | NT_CMD TM_COLON
   11       | TM_LOOP_INIT TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LOOP_BODY TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

   12 NT_EXPR_LIST: NT_EXPR
   13             | NT_EXPR TM_COMMA NT_EXPR_LIST

   14 NT_EXPR_2: TM_NAT
   15          | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   16          | TM_IDENT TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN
   17          | TM_IDENT
   18          | TM_NOT NT_EXPR_2
   19          | TM_MINUS NT_EXPR_2

   20 NT_EXPR: NT_EXPR_2
   21        | NT_EXPR TM_MUL NT_EXPR
   22        | NT_EXPR TM_PLUS NT_EXPR
   23        | NT_EXPR TM_MINUS NT_EXPR
   24        | NT_EXPR TM_DIV NT_EXPR
   25        | NT_EXPR TM_MOD NT_EXPR
   26        | NT_EXPR TM_LT NT_EXPR
   27        | NT_EXPR TM_GT NT_EXPR
   28        | NT_EXPR TM_LE NT_EXPR
   29        | NT_EXPR TM_GE NT_EXPR
   30        | NT_EXPR TM_EQ NT_EXPR
   31        | NT_EXPR TM_NE NT_EXPR
   32        | NT_EXPR TM_AND NT_EXPR
   33        | NT_EXPR TM_OR NT_EXPR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 14
    TM_IDENT <i> (259) 5 16 17
    TM_LEFT_BRACE <none> (260) 8 9 11
    TM_RIGHT_BRACE <none> (261) 8 9 11
    TM_LEFT_PAREN <none> (262) 8 9 15 16
    TM_RIGHT_PAREN <none> (263) 8 9 15 16
    TM_COLON <none> (264) 8 9 10 11
    TM_COMMA <none> (265) 13
    TM_CONTINUE <none> (266) 2
    TM_BREAK <none> (267) 3
    TM_SKIP <none> (268) 4
    TM_SEMICOL <none> (269) 7
    TM_LOOP_INIT <none> (270) 11
    TM_LOOP_BODY <none> (271) 11
    TM_MALLOC <none> (272)
    TM_RI <none> (273)
    TM_RC <none> (274)
    TM_WI <none> (275)
    TM_WC <none> (276)
    TM_VAR <none> (277) 5
    TM_IF <none> (278) 8 9
    TM_THEN <none> (279)
    TM_ELSE <none> (280) 8
    TM_WHILE <none> (281)
    TM_DO <none> (282)
    TM_ASGNOP <none> (283) 6
    TM_OR <none> (284) 33
    TM_AND <none> (285) 32
    TM_NOT <none> (286) 18
    TM_LT <none> (287) 26
    TM_LE <none> (288) 28
    TM_GT <none> (289) 27
    TM_GE <none> (290) 29
    TM_EQ <none> (291) 30
    TM_NE <none> (292) 31
    TM_PLUS <none> (293) 22
    TM_MINUS <none> (294) 19 23
    TM_MUL <none> (295) 21
    TM_DIV <none> (296) 24
    TM_MOD <none> (297) 25


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    NT_WHOLE <c> (44)
        on left: 1
        on right: 0
    NT_CMD <c> (45)
        on left: 2 3 4 5 6 7 8 9 10 11
        on right: 1 7 8 9 10 11
    NT_EXPR_LIST <e_l> (46)
        on left: 12 13
        on right: 13 16
    NT_EXPR_2 <e> (47)
        on left: 14 15 16 17 18 19
        on right: 18 19 20
    NT_EXPR <e> (48)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 6 8 9 12 13 15 21 22 23 24 25 26 27 28 29 30 31 32 33


State 0

    0 $accept: . NT_WHOLE $end

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_CONTINUE    shift, and go to state 4
    TM_BREAK       shift, and go to state 5
    TM_SKIP        shift, and go to state 6
    TM_LOOP_INIT   shift, and go to state 7
    TM_VAR         shift, and go to state 8
    TM_IF          shift, and go to state 9
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_WHOLE   go to state 12
    NT_CMD     go to state 13
    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 15


State 1

   14 NT_EXPR_2: TM_NAT .

    $default  reduce using rule 14 (NT_EXPR_2)


State 2

   16 NT_EXPR_2: TM_IDENT . TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN
   17          | TM_IDENT .

    TM_LEFT_PAREN  shift, and go to state 16

    $default  reduce using rule 17 (NT_EXPR_2)


State 3

   15 NT_EXPR_2: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 17


State 4

    2 NT_CMD: TM_CONTINUE .

    $default  reduce using rule 2 (NT_CMD)


State 5

    3 NT_CMD: TM_BREAK .

    $default  reduce using rule 3 (NT_CMD)


State 6

    4 NT_CMD: TM_SKIP .

    $default  reduce using rule 4 (NT_CMD)


State 7

   11 NT_CMD: TM_LOOP_INIT . TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LOOP_BODY TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_COLON  shift, and go to state 18


State 8

    5 NT_CMD: TM_VAR . TM_IDENT

    TM_IDENT  shift, and go to state 19


State 9

    8 NT_CMD: TM_IF . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    9       | TM_IF . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 20


State 10

   18 NT_EXPR_2: TM_NOT . NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 21


State 11

   19 NT_EXPR_2: TM_MINUS . NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 22


State 12

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 23


State 13

    1 NT_WHOLE: NT_CMD .
    7 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD
   10       | NT_CMD . TM_COLON

    TM_COLON    shift, and go to state 24
    TM_SEMICOL  shift, and go to state 25

    $default  reduce using rule 1 (NT_WHOLE)


State 14

   20 NT_EXPR: NT_EXPR_2 .

    $default  reduce using rule 20 (NT_EXPR)


State 15

    6 NT_CMD: NT_EXPR . TM_ASGNOP NT_EXPR
   21 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_DIV NT_EXPR
   25        | NT_EXPR . TM_MOD NT_EXPR
   26        | NT_EXPR . TM_LT NT_EXPR
   27        | NT_EXPR . TM_GT NT_EXPR
   28        | NT_EXPR . TM_LE NT_EXPR
   29        | NT_EXPR . TM_GE NT_EXPR
   30        | NT_EXPR . TM_EQ NT_EXPR
   31        | NT_EXPR . TM_NE NT_EXPR
   32        | NT_EXPR . TM_AND NT_EXPR
   33        | NT_EXPR . TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 26
    TM_OR      shift, and go to state 27
    TM_AND     shift, and go to state 28
    TM_LT      shift, and go to state 29
    TM_LE      shift, and go to state 30
    TM_GT      shift, and go to state 31
    TM_GE      shift, and go to state 32
    TM_EQ      shift, and go to state 33
    TM_NE      shift, and go to state 34
    TM_PLUS    shift, and go to state 35
    TM_MINUS   shift, and go to state 36
    TM_MUL     shift, and go to state 37
    TM_DIV     shift, and go to state 38
    TM_MOD     shift, and go to state 39


State 16

   16 NT_EXPR_2: TM_IDENT TM_LEFT_PAREN . NT_EXPR_LIST TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_LIST  go to state 40
    NT_EXPR_2     go to state 14
    NT_EXPR       go to state 41


State 17

   15 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   21 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_DIV NT_EXPR
   25        | NT_EXPR . TM_MOD NT_EXPR
   26        | NT_EXPR . TM_LT NT_EXPR
   27        | NT_EXPR . TM_GT NT_EXPR
   28        | NT_EXPR . TM_LE NT_EXPR
   29        | NT_EXPR . TM_GE NT_EXPR
   30        | NT_EXPR . TM_EQ NT_EXPR
   31        | NT_EXPR . TM_NE NT_EXPR
   32        | NT_EXPR . TM_AND NT_EXPR
   33        | NT_EXPR . TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 42
    TM_OR           shift, and go to state 27
    TM_AND          shift, and go to state 28
    TM_LT           shift, and go to state 29
    TM_LE           shift, and go to state 30
    TM_GT           shift, and go to state 31
    TM_GE           shift, and go to state 32
    TM_EQ           shift, and go to state 33
    TM_NE           shift, and go to state 34
    TM_PLUS         shift, and go to state 35
    TM_MINUS        shift, and go to state 36
    TM_MUL          shift, and go to state 37
    TM_DIV          shift, and go to state 38
    TM_MOD          shift, and go to state 39


State 18

   11 NT_CMD: TM_LOOP_INIT TM_COLON . TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LOOP_BODY TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 43


State 19

    5 NT_CMD: TM_VAR TM_IDENT .

    $default  reduce using rule 5 (NT_CMD)


State 20

    8 NT_CMD: TM_IF TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    9       | TM_IF TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 44


State 21

   18 NT_EXPR_2: TM_NOT NT_EXPR_2 .

    $default  reduce using rule 18 (NT_EXPR_2)


State 22

   19 NT_EXPR_2: TM_MINUS NT_EXPR_2 .

    $default  reduce using rule 19 (NT_EXPR_2)


State 23

    0 $accept: NT_WHOLE $end .

    $default  accept


State 24

   10 NT_CMD: NT_CMD TM_COLON .

    $default  reduce using rule 10 (NT_CMD)


State 25

    7 NT_CMD: NT_CMD TM_SEMICOL . NT_CMD

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_CONTINUE    shift, and go to state 4
    TM_BREAK       shift, and go to state 5
    TM_SKIP        shift, and go to state 6
    TM_LOOP_INIT   shift, and go to state 7
    TM_VAR         shift, and go to state 8
    TM_IF          shift, and go to state 9
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_CMD     go to state 45
    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 15


State 26

    6 NT_CMD: NT_EXPR TM_ASGNOP . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 46


State 27

   33 NT_EXPR: NT_EXPR TM_OR . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 47


State 28

   32 NT_EXPR: NT_EXPR TM_AND . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 48


State 29

   26 NT_EXPR: NT_EXPR TM_LT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 49


State 30

   28 NT_EXPR: NT_EXPR TM_LE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 50


State 31

   27 NT_EXPR: NT_EXPR TM_GT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 51


State 32

   29 NT_EXPR: NT_EXPR TM_GE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 52


State 33

   30 NT_EXPR: NT_EXPR TM_EQ . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 53


State 34

   31 NT_EXPR: NT_EXPR TM_NE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 54


State 35

   22 NT_EXPR: NT_EXPR TM_PLUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 55


State 36

   23 NT_EXPR: NT_EXPR TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 56


State 37

   21 NT_EXPR: NT_EXPR TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 57


State 38

   24 NT_EXPR: NT_EXPR TM_DIV . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 58


State 39

   25 NT_EXPR: NT_EXPR TM_MOD . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 59


State 40

   16 NT_EXPR_2: TM_IDENT TM_LEFT_PAREN NT_EXPR_LIST . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 60


State 41

   12 NT_EXPR_LIST: NT_EXPR .
   13             | NT_EXPR . TM_COMMA NT_EXPR_LIST
   21 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_DIV NT_EXPR
   25        | NT_EXPR . TM_MOD NT_EXPR
   26        | NT_EXPR . TM_LT NT_EXPR
   27        | NT_EXPR . TM_GT NT_EXPR
   28        | NT_EXPR . TM_LE NT_EXPR
   29        | NT_EXPR . TM_GE NT_EXPR
   30        | NT_EXPR . TM_EQ NT_EXPR
   31        | NT_EXPR . TM_NE NT_EXPR
   32        | NT_EXPR . TM_AND NT_EXPR
   33        | NT_EXPR . TM_OR NT_EXPR

    TM_COMMA  shift, and go to state 61
    TM_OR     shift, and go to state 27
    TM_AND    shift, and go to state 28
    TM_LT     shift, and go to state 29
    TM_LE     shift, and go to state 30
    TM_GT     shift, and go to state 31
    TM_GE     shift, and go to state 32
    TM_EQ     shift, and go to state 33
    TM_NE     shift, and go to state 34
    TM_PLUS   shift, and go to state 35
    TM_MINUS  shift, and go to state 36
    TM_MUL    shift, and go to state 37
    TM_DIV    shift, and go to state 38
    TM_MOD    shift, and go to state 39

    $default  reduce using rule 12 (NT_EXPR_LIST)


State 42

   15 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN .

    $default  reduce using rule 15 (NT_EXPR_2)


State 43

   11 NT_CMD: TM_LOOP_INIT TM_COLON TM_LEFT_BRACE . NT_CMD TM_RIGHT_BRACE TM_LOOP_BODY TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_CONTINUE    shift, and go to state 4
    TM_BREAK       shift, and go to state 5
    TM_SKIP        shift, and go to state 6
    TM_LOOP_INIT   shift, and go to state 7
    TM_VAR         shift, and go to state 8
    TM_IF          shift, and go to state 9
    TM_NOT         shift, and go to state 10
    TM_MINUS       shift, and go to state 11

    NT_CMD     go to state 62
    NT_EXPR_2  go to state 14
    NT_EXPR    go to state 15


State 44

    8 NT_CMD: TM_IF TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    9       | TM_IF TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN TM_COLON TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   21 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_DIV NT_EXPR
   25        | NT_EXPR . TM_MOD NT_EXPR
   26        | NT_EXPR . TM_LT NT_EXPR
   27        | NT_EXPR . TM_GT NT_EXPR
   28        | NT_EXPR . TM_LE NT_EXPR
   29        | NT_EXPR . TM_GE NT_EXPR
   30        | NT_EXPR . TM_EQ NT_EXPR
   31        | NT_EXPR . TM_NE NT_EXPR
   32        | NT_EXPR . TM_AND NT_EXPR
   33        | NT_EXPR . TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 63
    TM_OR           shift, and go to state 27
    TM_AND          shift, and go to state 28
    TM_LT           shift, and go to state 29
    TM_LE           shift, and go to state 30
    TM_GT           shift, and go to state 31
    TM_GE           shift, and go to state 32
    TM_EQ           shift, and go to state 33
    TM_NE           shift, and go to state 34
    TM_PLUS         shift, and go to state 35
    TM_MINUS        shift, and go to state 36
    TM_MUL          shift, and go to state 37
    TM_DIV          shift, and go to state 38
    TM_MOD          shift, and go to state 39


State 45

    7 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD
    7       | NT_CMD TM_SEMICOL NT_CMD .
   10       | NT_CMD . TM_COLON

    TM_COLON    shift, and go to state 24
    TM_SEMICOL  shift, and go to state 25

    $default  reduce using rule 7 (NT_CMD)


State 46
